# nhope

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  bastard.toml  sanitize-blacklist
benchs/async/: future-benchmark.cpp  invoke-benchmark.cpp
benchs/io/: fifo-benchmark.cpp  io-benchmark.cpp  tcp-read-benchmark.cpp
cmake/: bastard_setup.cmake  enable_warnings.cmake  sanitizer.cmake
include/nhope/: async.h  io.h  seq.h  utils.h
include/nhope/async/: all.h  ao-context-close-handler.h  ao-context-error.h  ao-context.h  ao-handler.h  async-invoke.h  call-queue.h  delayed-property.h  event.h  executor.h  future-error.h  future.h  io-context-executor.h  lockable-value.h  manageable-task.h  recursive-lock.h  reverse-lock.h  safe-callback.h  scheduler.h  state-observer.h  strand-executor.h  task.h  thread-executor.h  thread-pool-executor.h  timer.h  ts-queue.h
include/nhope/async/detail/: ao-context-impl.h  ao-context-state.h  ao-handler-id.h  async-invoke-aohandler.h  async-invoke.h  future-state.h  future.h  make-strand.h  safe-callback.h  thread-name.h  ts-shared-flag.h
include/nhope/asyncs/: ao-context.h  async-invoke.h  chan.h  consumer-list.h  consumer.h  func-executor.h  func-produser.h  future.h  lockable-value.h  manageable-task.h  notifier.h  produser.h  reverse_lock.h  scheduler.h  thread-executor.h  timer.h  ts-queue.h
include/nhope/io/: bit-seq-reader.h  file.h  io-device.h  local-socket.h  network.h  null-device.h  pushback-reader.h  serial-port.h  sock-addr.h  string-reader.h  string-writter.h  tcp.h  udp.h
include/nhope/io/detail/: asio-device-wrapper.h  asio-device.h  serial-port-detail.h
include/nhope/seq/: chan.h  consumer-list.h  consumer.h  fifo.h  func-producer.h  func-produser.h  notifier.h  priority-queue.h  producer.h  produser.h  take.h  weak_list.h
include/nhope/seq/detail/: take-one-consumer.h
include/nhope/utils/: array.h  base64.h  bits.h  bytes.h  com-discover.h  exception_ptr.h  filesystem.h  hex.h  md5.h  noncopyable.h  scope-exit.h  stack-set.h  stack-storage.h  string-utils.h  type.h
include/nhope/utils/detail/: compiler.h  fast-pimpl.h  ref-ptr.h
lib/async/: ao-context-error.cpp  ao-context.cpp  ao-handler-storage.h  event.cpp  future-error.cpp  io-context-executor.cpp  make-strand.h  manageable-task.cpp  scheduler.cpp  strand-executor.cpp  task.cpp  thread-executor.cpp  thread-pool-executor.cpp  timer.cpp
lib/asyncs/: ao-context.cpp  asio-steady-timer-impl.cpp  manageable-task.cpp  scheduler.cpp  thread-executor.cpp  timer.cpp
lib/io/: bit-seq-reader.cpp  file.cpp  io-device.cpp  io-thread-pool.cpp  io-thread-pool.h  local-socket.cpp  null-device.cpp  pushback-reader.cpp  serial-port.cpp  sock-addr.cpp  string-reader.cpp  string-writter.cpp  tcp.cpp  udp.cpp
lib/utils/: base64.cpp  exception_ptr.cpp  filesystem.cpp  hex.cpp  md5.cpp  string-utils.cpp
specific/linux/: com-discover-linux.cpp  network.cpp  serial-port-detail-mc.h  serial-port-detail.cpp  serial-port-linux.cpp  thread-name-linux.cpp
specific/windows/: com-discover-win.cpp  network-win.cpp  serial-port-detail.cpp  serial-port-win.cpp  thread-name-win.cpp
tests/: CMakeLists.txt
tests/async/: all-tests.cpp  ao-context-tests.cpp  async-invoke-tests.cpp  call-queue-tests.cpp  delayed-property-test.cpp  event-tests.cpp  executors-tests.cpp  future-tests.cpp  io-context-executor-tests.cpp  lockable-value-tests.cpp  manageable-task-tests.cpp  recursive-lock-tests.cpp  safe-callback-tests.cpp  scheduler-tests.cpp  scope-exit-tests.cpp  sock-addr-tests.cpp  state-obeserver-test.cpp  strand-executor-tests.cpp  task-tasks.cpp  thread-executor-tests.cpp  thread-pool-executor-tests.cpp  timer-tests.cpp  ts-queue-tests.cpp
tests/asyncs/: CMakeLists.txt  asio-steady-timer-impl-tests.cpp  async-invoke-tests.cpp  chan-tests.cpp  func-executor-tests.cpp  future-tests.cpp  lockable-value-tests.cpp  manageable-task-tests.cpp  notifier-tests.cpp  scheduler-tests.cpp  timer-tests.cpp  ts-queue-tests.cpp  ts-queue.cpp
tests/io/: io-tests.cpp  network-tests.cpp
tests/seq/: chan-tests.cpp  consumer-list-tests.cpp  fifo-tests.cpp  notifier-tests.cpp  priority-queue-tests.cpp  take-tests.cpp  weak-list-tests.cpp
tests/test-helpers/: io-stub.h  tcp-echo-server.h  udp-echo-server.h  virtual-serial-port.h  wait.h
tests/utils/: base64_tests.cpp  bytes_tests.cpp  comport_tests.cpp  concat_tests.cpp  exception_ptr_tests.cpp  filesystem_tests.cpp  hex_tests.cpp  md5_tests.cpp  ref-ptr-tests.cpp  scope-exit-tests.cpp  stack-storage-tests.cpp  string-utils_test.cpp  type_tests.cpp
